2017-10-16 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-835

	* src/oem.h (ArtsLog::step):
	Change name of variable to avoid shadowing of function name.

	* src/m_oem.cc(OEM):
	Fix naming of covariance matrices and damping matrix of LM method.

	* src/covariance_matrix.[h,cc] (get_inverse):
	Added function to extract inverse from covariance matrix.

	* 3rdparty/invlib/src/invlib/interfaces/arts_wrapper.h:
	Fixed conversion to dense matrix.

2017-10-15  Stefan Buehler  <sbuehler(at)ltu.se>

	* arts-2-3-834

	* src/absorption.cc (xsec_single_line): Stuart Fox has reported
	the bug that for mirror lines (negative F0) the shift was in the
	wrong direction. Added an if statement that makes sure that the shift
	goes in the other direction for negative frequency mirror lines,
	so that they really end up at the negative of the frequency of the
	original line.

2017-10-13 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-833

	* src/rte.cc (get_stepwise_scattersky_source):
	Bugfix in setting up pnd input for pha_mat_sptFromScat_data. Fixes bugg
	reported by Patrick (hopefully...).

	* src/m_optproperties.cc ([opt_prop,pha_mat]_sptFrom*):
	Identical temperature-range-exceed error messages are raised by all the
	methods. For easier debugging, add info by which (non-WS-)method it was
	raised.

2017-10-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-832

	* src/m_microphysics.cc (psdMgdMass): A small start.

	(psdMgd): Non-fixed parameters are now flagged by Inf, instead of NaN.

	* src/math_funcs.cc (gamma_func, lgamma_func): Removed.
	std::tgamma and std::lgamma are now at hand.

	(mgd): Moved from microphysics.cc.

2017-10-12  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-831

	* src/m_microphysics.cc (psdF07, psdMH97, psdW16): To calculate
	dpsd_data_dx, the perturbation of IWC/RWC is now always 1e-9. That
	was found to work better in tests.

	* src/m_jacobian.cc (jacobianAddFreqShift): It is now checked that