@@ -1,3 +1,12 @@
+2017-10-16  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-836
+
+	* src/parser.cc (ArtsParser::parse_method_args):
+
+	Improve error message for wrong or duplicate named arguments. Reported
+	by Patrick.
+
 2017-10-16 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>
 
 	* arts-2-3-835
